--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="PDk_vSJIY87QQ-K_KFBzZyjwZX8JmsD38DaAdMu0yNE" />
+  <meta name="description" content="Github profile featuring the PokeRogue Searchdex, a fast easy-to-use Pokedex with powerful filtering">
   <script src="https://cdn.counter.dev/script.js" data-id="d6513565-e3c9-4869-a05c-03d0caa36766" data-utcoffset="-5"></script>
   <!-- <link rel="icon" href="ui/favicon.ico" type="image/ico"> -->
-  <title>Sandstorm's Projects</title>
+  <title>Sandstorm's Github</title>
   <link rel="stylesheet" href="style.css">
   <style>
     /* Set default text color for the entire page */
