--- a/index.html
+++ b/index.html
@@ -42,15 +42,16 @@
         <a class="img-container" href="https://sandstormer.github.io/PokeRogue-Dex/">
           <img class="img-banner" id="searchdex" src="searchdex.png">
           <div class="img-overlay">
-            <span class="img-title" style="font-size: 30px; color: rgb(140, 130, 240);">PokeRogue SearchDex</span> 
+            <span class="img-title" style="font-size: 30px; color: rgb(140, 130, 240);">
+              <img class="mag-img" src="icon.png">
+              PokeRogue SearchDex</span> 
             <span class="img-desc" >
               <br>A fast and <span style="color:rgb(140, 130, 240);">powerful search tool</span> for Pokerogue
-              <br>with filtering and sorting of every Pokemon
+              <br>with filtering, sorting, and info of every Pokemon
             </span>
           </div>
         </a>
       </div>
   </div>
-  <!-- <script src="script.js"></script> -->
 </body>
 </html>
